--- a/src/Style/Login.css
+++ b/src/Style/Login.css
@@ -15,6 +15,8 @@
     justify-content: center;
     align-self: center;
 }
+
+
 .login_main_cont{
     margin-top: 30px;
     width: 70%;
@@ -28,6 +30,7 @@
    
 }
 .login_form_div{
+    background-image: url("https://i.pinimg.com/originals/09/bd/6b/09bd6bb99a7d71a8dcc34a795619e64c.jpg");
     width: 40%;
     height: 100%;
     background: #ffffff;
@@ -35,9 +38,14 @@
 .login_sub_div{
     width: 60%;
     height: 100%;
-    background: #065ad8;
+   display: flex;
+    justify-content: center;
+    align-items: center;
 }
-
+.login_sub_div img {
+    width: 60%;
+    height: 60%;
+}
 .login_form_title{
     font-size: 20px;
     font-weight: 600;
@@ -77,7 +85,7 @@
 	box-shadow: 0px 2px 2px #5C5696;
 	cursor: pointer;    
 	transition: .2s;
-    margin-top: 120px;
+    margin-top: 70px;
     margin-left: 35px;
 
 }
@@ -151,4 +159,9 @@
     justify-content: center;
     align-items: center;
     
+}
+.login_form{
+    margin-top: 70px;
+   
+
 }
