--- a/src/Style/MenuUser.css
+++ b/src/Style/MenuUser.css
@@ -1,5 +1,45 @@
-.MenuUser{
+/* .MenuUser{
     width:200px;
     height: 100vh;
     background: #000000;
+} */
+
+.sub-bar{
+    /* height: 900px; */
+    width: 180px;
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    padding: 5px;
+    border-radius: 0 10px 10px 0; 
+
+
+}
+
+.sub-bar div{
+    /* width: 150px; */
+    height: 20px;
+    /* padding: 10px 10px; */
+    margin-top: 20px;
+    /* border-radius: 10%; */
+   margin-left: 10px;
+    
+    
+
+}
+
+.sub-bar div a:hover{
+    font-size: 16px;
+    font-weight: 300;
+}
+
+
+.sub-bar div a{
+    text-decoration: none;
+    font-size: 15px;
+    text-align: left;
+    color: white;
+    transition: background-color 2s ease;
+    /* padding: 5px 5px; */
 }
